Dark mode styling fixes (#79)
* fix styling issues

* API coverage color fixes

* Color fixes

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -165,6 +165,10 @@
   font-weight: normal !important;
 }
 
+.sidebar-content .top-level > li {
+    min-height: 32.4px;
+}
+
 .sidebar-content .top-level > li .large {
     font-family: 'AeonikFono', sans-serif;
     font-size: 16px !important;
@@ -172,6 +176,7 @@
     line-height: 1.0;
     color: var(--gray-neutral-400);
     letter-spacing: -0.15%;
+    line-height: 1.4;
 }
 
 select.astro-oojz3yon {
